@@ -427,7 +427,7 @@
     [[day_images]]
         x_label_format = %H:%M
         bottom_label_format = %m/%d/%y %H:%M
-        time_length = 86400    # == 24 hours
+        time_length = 97200    # == 27 hours
         
         [[[daybarometer]]]
             [[[[barometer]]]]
